# Neuromorphic-AI

./: LICENSE  README.md  neuromorphic_demo.py  vflow-prism.html
prism_pkg/: pyproject.toml
prism_pkg/examples/: run_word_processor.py
prism_pkg/prism/: __init__.py  engine.py
prism_pkg/prism/backends/: __init__.py  akida.py  loihi2.py
prism_pkg/prism/manifold/: __init__.py  ast_nodes.py  parser.py
prism_pkg/prism/utils/: __init__.py  validators.py
prism_pkg/tests/: test_prism.py
